--- a/client/style.css
+++ b/client/style.css
@@ -1,37 +1,65 @@
-body {
+body.unificado {
   font-family: sans-serif;
   margin: 20px;
   background-color: #f5f5f5;
+  text-align: center;
 }
 
-h1,
-h2,
-h3 {
-  margin: 0 0 10px;
+h1 {
+  margin-bottom: 5px;
 }
 
-#mensagens {
+.painel {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.bloco {
   background: white;
-  padding: 10px;
-  border-radius: 6px;
-  height: 300px;
+  border-radius: 8px;
+  padding: 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.caixa-mensagens {
+  height: 200px;
   overflow-y: auto;
   border: 1px solid #ccc;
+  padding: 10px;
+  margin-top: 10px;
+  text-align: left;
+  font-family: monospace;
+  background-color: #fafafa;
+}
+
+input[type="text"] {
+  padding: 8px;
+  width: 80%;
+  margin-top: 10px;
   margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
 
-.msg {
-  margin: 5px 0;
-  padding: 4px;
-  border-bottom: 1px solid #eee;
-}
-
-.sequenciador {
-  color: green;
+button {
+  padding: 10px 20px;
+  margin-top: 5px;
+  cursor: pointer;
+  border: none;
+  border-radius: 6px;
+  background-color: #007bff;
+  color: white;
   font-weight: bold;
 }
 
-#consoleLog {
+button:hover {
+  background-color: #0056b3;
+}
+
+.console-box {
   background: #111;
   color: #0f0;
   padding: 10px;
@@ -40,33 +68,51 @@ h3 {
   overflow-y: auto;
   white-space: pre-wrap;
   font-family: monospace;
+  text-align: left;
+  margin-top: 10px;
 }
 
-/* Estilo da landing page */
-body.landing {
-  text-align: center;
-  padding-top: 100px;
-  background-color: #f0f0f0;
+.consoles {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 20px;
+  margin-top: 20px;
 }
 
-.landing h1 {
-  margin-bottom: 30px;
+.emissor {
+  max-width: 300px;
+  margin: 0 auto;
+  max-height: 350px;
 }
 
-.btn {
-  display: inline-block;
-  margin: 10px;
-  padding: 15px 30px;
-  font-size: 18px;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  background-color: #007bff;
-  color: white;
-  transition: background-color 0.3s ease;
-  text-decoration: none;
+.emissores-coluna {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  grid-row: span 2;
+    grid-column: 1;
 }
 
-.btn:hover {
-  background-color: #0056b3;
+.caixa-mensagens-receptor {
+  height: 457px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-top: 10px;
+  text-align: left;
+  font-family: monospace;
+  background-color: #fafafa;
+}
+
+.console-box-sequenciador {
+  background: #111;
+  color: #0f0;
+  padding: 10px;
+  border-radius: 6px;
+  height: 298px;
+  overflow-y: auto;
+  white-space: pre-wrap;
+  font-family: monospace;
+  text-align: left;
+  margin-top: 10px;
 }
